Added a basic description to the site using <p> tags.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 	</head>
 	<body>
 		<div id="mainframe">
-			<h1>Anonymous Tiger</h1>	
+			<h1>Anonymous Tiger</h1>
+			<p>Research Website for Team 29</p>
 		</div>
 	</body>
 <html>
-
-
-
