Added a test link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<div id="mainframe">
 			<h1>Anonymous Tiger</h1>
 			<p>Research Website for Team 29</p>
+			<a href="www.google.co.uk">Test Link</a>
 		</div>
 	</body>
 <html>
