added background and centred title

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <html>
 	<head>
 		<title>Imaging</title>
-		<link rel="stylesheet" type="text/stylesheet" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<script src="js/jquery-1.11.1.js"></script>
 		<script src="js/index.js"></script>
 	</head>
 	<body>
+		<img id='background' src='img/background.jpg'>
 		<div id="mainframe">
-			<h1>Anonymous Tiger</h1>
-			<p>Research Website for Team 29</p>
+			<div id='title'>
+				<h1>Anonymous Tiger</h1>
+				<p>Research Website for Team 29</p>
+			</div>
 			<a href="https://www.google.co.uk">Test Link</a>
 		</div>
 	</body>
