added navigation bar and extra pages.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
 	<head>
 		<title>Imaging</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
-		<script src="js/jquery-1.11.1.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="js/index.js"></script>
 	</head>
-	<body>
+	<body class='noscroll'>
 		<img id='background' src='img/background.jpg'>
 		<div id="mainframe">
-			<div id='title'>
-				<h1>Anonymous Tiger</h1>
-				<p>Research Website for Team 29</p>
+			<div id='titlecont'>
+				<h1 id='title'>Anonymous Tiger</h1>
+				<p id='subtitle'>Research Website for Team 29</p>
 			</div>
-			<a href="https://www.google.co.uk">Test Link</a>
+			<div id='navbar'>
+				<a href='#'><p class='navitem currentpage mainitem'>Home</p></a>
+				<a href='html/t1.html'><p class='navitem'>Topic 1</p></a>
+				<a href='html/t2.html'><p class='navitem'>Topic 2</p></a>
+				<a href='html/t3.html'><p class='navitem'>Topic 3</p></a>
+				<a href='html/t4.html'><p class='navitem'>Topic 4</p></a>
+			</div>
 		</div>
 	</body>
 <html>
