--- a/html/t2.html
+++ b/html/t2.html
@@ -7,7 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="../js/index.js"></script>
 	</head>
-	<body class='noscroll'>
+	<body>
 		<img id='background' src='../img/background.jpg'>
 		<div id="mainframe">
 			<div id='titlecont'>
@@ -20,6 +20,18 @@
 				<a href='#'><p class='navitem currentpage'>Topic 2</p></a>
 				<a href='t3.html'><p class='navitem'>Topic 3</p></a>
 				<a href='t4.html'><p class='navitem'>Topic 4</p></a>
+			</div>
+			<div class='maincontent'>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+					Lorem Ipsum has been the industry's standard dummy text ever 
+					since the 1500s, when an unknown printer took a galley of type 
+					nd scrambled it to make a type specimen book. It has survived 
+					not only five centuries, but also the leap into electronic 
+					typesetting, remaining essentially unchanged. It was popularised
+					n the 1960s with the release of Letraset sheets containing 
+					Lorem Ipsum passages, and more recently with desktop publishing
+					software like Aldus PageMaker including versions of Lorem Ipsum.
+				</p>
 			</div>
 		</div>
 	</body>
