--- a/index.html
+++ b/index.html
@@ -31,13 +31,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="/history.html">History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Profile</a>
+                        <a class="nav-link" href="/research.html">The Research</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/impact.html">Impact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/get-involved.html">Get Involved</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/team.html">The Team</a>
                     </li>
                 </ul>
                 <form class="form-inline">
