--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
                         <a class="nav-link" href="/team.html">The Team</a>
                     </li>
                 </ul>
+                <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                </form>
+                </form>-->
             </div>
         </div>
     </nav>
