--- a/get-involved.html
+++ b/get-involved.html
@@ -64,7 +64,7 @@
                 <div class="row pt-5 mt-3">
                     <div class="col-md-12 mb-3">
                         <div class="intro-info-content text-center">
-                            <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">Vision and Imaging <span class="indigo-text font-bold">GET INVOLVED</span></h1>
+                            <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION AND IMAGING <span class="indigo-text font-bold">GET INVOLVED</span></h1>
                             <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">What can you do?</h5>
                         </div>
                     </div>
