--- a/team.html
+++ b/team.html
@@ -79,8 +79,7 @@
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-
-                    <p>Content Here - Add headings from content plan.</p>p>
+                    <p>Content Here - Add headings from content plan.</p>
                 </div>
             </div>
         </div>
