Added animation initialisation.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
     <script type="text/javascript" src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/mdb.min.js"></script>
+
+    new WOW.init();
 </body>
 
 </html>
