--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
         <div class="container">
-            <a class="navbar-brand" href="#"><strong>UCL</strong></a>
+            <img src="img/ucl-logo-white.png" alt="UCL Logo" width="100px" height="33px">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -103,8 +103,6 @@
     <script type="text/javascript" src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/mdb.min.js"></script>
-
-    new WOW.init();
 </body>
 
 </html>
