--- a/history.html
+++ b/history.html
@@ -24,7 +24,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
         <div class="container">
-            <img src="img/ucl-logo-white.png" alt="UCL Logo" width="100px" height="33px">
+            <a class="navbar-brand" href="#"><img class='logo' src='img/ucl-logo-white.png'></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
