Stopped pages reloading themselves.

--- a/impact.html
+++ b/impact.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="/research.html">The Research</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/impact.html">Impact</a>
+                        <a class="nav-link" href="#">Impact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/get-involved.html">Get Involved</a>
