--- a/get-involved.html
+++ b/get-involved.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="/impact.html">Impact</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/get-involved.html">Get Involved</a>
+                        <a class="nav-link" href="#">Get Involved</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/team.html">The Team</a>
