--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="/history.html">History</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/research.html">The Research</a>
+                        <a class="nav-link" href="#">The Research</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/impact.html">Impact</a>
