--- a/team.html
+++ b/team.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="/get-involved.html">Get Involved</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/team.html">The Team</a>
+                        <a class="nav-link" href="#">The Team</a>
                     </li>
                 </ul>
                 <!--
