--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -35,7 +34,7 @@
                         <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/history-e.html">History</a>
+                        <a class="nav-link" href="/history.html">History</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/research.html">The Research</a>
