Added basic content plan.

--- a/get-involved.html
+++ b/get-involved.html
@@ -79,7 +79,9 @@
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-                    <p>Content Here - Add headings from content plan.</p>
+                    <p>Question and submit form – look how to send this to an email</p>
+                    <p>- Extra resources – publications, extra links, games?</p>
+                    <p>- Calendar of upcoming events – lectures, talks, etc</p>
                 </div>
             </div>
         </div>
