More content plan.

--- a/history.html
+++ b/history.html
@@ -79,7 +79,12 @@
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-                    <p>Content Here - Add headings from content plan.</p>                    
+                    <p>- History of the science itself</p>
+                    <p>- History of the UCL department</p>
+                    <p>- Timeline – interactive slider</p>
+                    <p>- Major events in history the department has contributed to</p>
+                    <p>- Future of the department</p>
+                    <p>- Future of the science</p>               
                 </div>
             </div>
         </div>
