--- a/impact.html
+++ b/impact.html
@@ -79,7 +79,12 @@
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-                    <p>Content Here - Add headings from content plan.</p>
+                    <p>- Automatic Inspection</p>
+                    <p>- AI</p>
+                    <p>- Image organisation</p>
+                    <p>- Navigation Vehicles</p>
+                    <p>- Medical image processing</p>
+                    <p>- Visual Effects</p>
                 </div>
             </div>
         </div>
