--- a/research.html
+++ b/research.html
@@ -79,7 +79,15 @@
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-                    <p>Content Here - Add headings from content plan.</p>
+                        <p>Scene Reconstruction</p>
+                        <p>The objective of this Scene Reconstruction technology is about taking the information of a scene in reality and computing a 3-dimensional model of it. This information provided are usually several pictures or a video of the scene. First, 3d sensing techniques on a grid basis would be used to get 3d images of the scene. Then certain algorithms would be used to connect the scenes together and form the 3d model.</p>                    
+                        <p>Image-understanding System</p>
+                        <p>Image-understanding system, also called as IUS, contains three levels. The first is called the Low Level. It contains primitives like the sides, the shapes and their position. Going on there is the Intermediate Level containing the volumes, the boundaries, etc. Then there is the High Level which contains the scenes. These require a lot of information from further studies.</p>
+                        <p>Other than that, techniques like inference and control are also used in IUS. Inference simply means to deduce new information from the facts already known, while control is the process that decides which technique should be used and when.</p>
+                        <p>- The process of research from start to finish</p>
+                        <p>- Overview of each team, what they are working on, major accomplishments</p>
+                        <p>- Publications to each team</p>
+                        <p>- Twitter page to each team</p>
                 </div>
             </div>
         </div>
