--- a/impact.html
+++ b/impact.html
@@ -20,7 +20,7 @@
 
     <!-- Start your project here-->
     <header>
-    
+
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
         <div class="container">
@@ -79,8 +79,9 @@
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-                    <p>- Automatic Inspection</p>
-                    <p>- AI</p>
+                    <h2>- Automatic Inspection</h2>
+                    <p> Factories are increasingly relying less on man-power and more on robotic and automated systems. By enabling factory robots to 'see', defect recognition and quality control can be greatly improved.<p>
+                    <h2>- AI</h2>
                     <p>- Image organisation</p>
                     <p>- Navigation Vehicles</p>
                     <p>- Medical image processing</p>
