--- a/index.html
+++ b/index.html
@@ -20,75 +20,218 @@
 
     <!-- Start your project here-->
     <header>
-    
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
-        <div class="container">
-            <img src="img/ucl-logo-white.png" alt="UCL Logo" width="100px" height="33px">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/history.html">History</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/research.html">The Research</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/impact.html">Impact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/get-involved.html">Get Involved</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/team.html">The Team</a>
-                    </li>
-                </ul>
-                <!--
+
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
+            <div class="container">
+                <img src="img/ucl-logo-white.png" alt="UCL Logo" width="100px" height="33px">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/index.html">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/history.html">History</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/research.html">The Research</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/impact.html">Impact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/get-involved.html">Get Involved</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/team.html">The Team</a>
+                        </li>
+                    </ul>
+                    <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                 </form>-->
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <!-- Intro Section -->
-      <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/img.jpg">
-        <div class="full-bg-img">
-            <div class="container flex-center">
-                <div class="row pt-5 mt-3">
-                    <div class="col-md-12 mb-3">
-                        <div class="intro-info-content text-center">
-                            <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & <span class="indigo-text font-bold">IMAGING SCIENCE</span></h1>
-                            <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Making computers see like us.</h5>
-                            <a class="btn btn-light-blue btn-lg wow fadeInDown" data-wow-delay="0.3s">Learn more</a> 
-                            <a class="btn btn-indigo btn-lg wow fadeInDown" data-wow-delay="0.3s">About</a> 
+        <!-- Intro Section -->
+        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/img.jpg">
+            <div class="full-bg-img">
+                <div class="container flex-center">
+                    <div class="row pt-5 mt-3">
+                        <div class="col-md-12 mb-3">
+                            <div class="intro-info-content text-center">
+                                <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION &
+                                    <span class="indigo-text font-bold">IMAGING SCIENCE</span>
+                                </h1>
+                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Making computers see like us.</h5>
+                                <a class="btn btn-light-blue btn-lg wow fadeInDown" data-wow-delay="0.3s">Learn more</a>
+                                <a class="btn btn-indigo btn-lg wow fadeInDown" data-wow-delay="0.3s">About</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-	</header>
+    </header>
 
-	<main>
+    <main>
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-
-                    <p>Summary of the department – what they do</p>
-                    <p>- Video – who are we video</p>
-                    <p>- Quick history and no of people</p>
-                    <p>- Some sort of interactive element - images</p>
-                    <p>- Brief example of some the most interesting research in 3 separate cards</p>
-                    
+                    <h1 class="font-bold light-blue-text my-5">What We Do</h1>
+                    <p>Computer vision and image processing aims to extract useful information from images and movies.</p>
+                    <p>More intro here</p>
+                    <p>There are many possible applications for our research:</p>
+                    <ul>
+                        <li>Face recognition</li>
+                        <li>Automated analysis of medical images</li>
+                        <li>Robotics</li>
+                        <li>Visual inspection for production lines</li>
+                        <li>Building 3D models of the real world</li>
+                    </ul>
+                    <!--Carousel Wrapper-->
+                    <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+                        <!--Indicators-->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-2" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-2" data-slide-to="2"></li>
+                        </ol>
+                        <!--/.Indicators-->
+                        <!--Slides-->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <div class="view hm-black-light">
+                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg" alt="First slide">
+                                    <div class="mask"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">Light mask</h3>
+                                    <p>First text</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <!--Mask color-->
+                                <div class="view hm-black-strong">
+                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
+                                    <div class="mask"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">Strong mask</h3>
+                                    <p>Secondary text</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <!--Mask color-->
+                                <div class="view hm-black-slight">
+                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
+                                    <div class="mask"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">Slight mask</h3>
+                                    <p>Third text</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/.Slides-->
+                        <!--Controls-->
+                        <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        <!--/.Controls-->
+                    </div>
+                    <!--/.Carousel Wrapper-->
+                    <h1 class="font-bold light-blue-text my-5">See What We Do</h1>
+                    <p>VIDEO HERE</p>
+                    <h1 class="font-bold light-blue-text my-5">Who We are</h1>
+                    <p>Brief history and people working</p>
+                    <h1 class="font-bold light-blue-text my-5">Our Work</h1>
                 </div>
+            </div>
+        </div>
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <!--Card-->
+                    <div class="card">
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
+                            <a href="#">
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title">Research 1</h4>
+                            <!--Text-->
+                            <p class="card-text">Brief description of some cool research</p>
+                            <a href="/research.html" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                    <!--/.Card-->
+                </div>
+
+                <div class="col">
+                    <!--Card-->
+                    <div class="card">
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
+                            <a href="#">
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title">Research 2</h4>
+                            <!--Text-->
+                            <p class="card-text">Brief description of some cool research</p>
+                            <a href="/research.html" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                    <!--/.Card-->
+                </div>
+
+                <div class="col">
+                    <!--Card-->
+                    <div class="card">
+                        <!--Card image-->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="Iamge of Research">
+                            <a href="#">
+                                <div class="mask"></div>
+                            </a>
+                        </div>
+                        <!--Card content-->
+                        <div class="card-body">
+                            <!--Title-->
+                            <h4 class="card-title">Research 3</h4>
+                            <!--Text-->
+                            <p class="card-text">Brief description of some cool research</p>
+                            <a href="/research.html" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                    <!--/.Card-->
+                </div>
+
             </div>
         </div>
     </main>
