--- a/index.html
+++ b/index.html
@@ -237,6 +237,61 @@
     </main>
     <!-- /Start your project here-->
 
+    <!--Footer-->
+    <footer class="page-footer indigo center-on-small-only">
+
+        <!--Footer Links-->
+        <div class="container-fluid">
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-md-6">
+                    <h5 class="title">Address</h5>
+                    <p>Department of Computer Science
+                    <br>University College London
+                    <br>Gower Street
+                    <br>London
+                    <br>WC1E 6BT</p>
+                </div>
+                <!--/.First column-->
+
+                <!--Second column-->
+                <div class="col-md-6">
+                    <h5 class="title">Links</h5>
+                    <ul>
+                        <li>
+                            <a href="http://www.ucl.ac.uk/disclaimer/">Disclaimer</a>
+                        </li>
+                        <li>
+                            <a href="http://www.ucl.ac.uk/accessibility/">Accessibility</a>
+                        </li>
+                        <li>
+                            <a href="http://www.ucl.ac.uk/legal-services/privacy">Privacy</a>
+                        </li>
+                        <li>
+                            <a href="http://search2.ucl.ac.uk/s/search.html?collection=ucl-public-meta&form=advanced">UCL Search</a>
+                        </li>
+                        <li>
+                            <a href="http://www.cs.ucl.ac.uk/help/">CS Help</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--/.Second column-->
+            </div>
+        </div>
+        <!--/.Footer Links-->
+
+        <!--Copyright-->
+        <div class="footer-copyright">
+            <div class="container-fluid">
+                © 2017 Copyright: Team 29 UCL
+            </div>
+        </div>
+        <!--/.Copyright-->
+
+    </footer>
+    <!--/.Footer-->
+
     <!-- SCRIPTS -->
     <!-- JQuery -->
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
