Added footer to all pages.

--- a/research.html
+++ b/research.html
@@ -20,79 +20,150 @@
 
     <!-- Start your project here-->
     <header>
-    
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
-        <div class="container">
-            <a class="navbar-brand" href="#"><img class='logo' src='img/ucl-logo-white.png'></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/history.html">History</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">The Research</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/impact.html">Impact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/get-involved.html">Get Involved</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/team.html">The Team</a>
-                    </li>
-                </ul>
-                <!--
+
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img class='logo' src='img/ucl-logo-white.png'>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/index.html">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/history.html">History</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">The Research</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/impact.html">Impact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/get-involved.html">Get Involved</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/team.html">The Team</a>
+                        </li>
+                    </ul>
+                    <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                 </form>-->
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <!-- Intro Section -->
-      <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/img.jpg">
-        <div class="full-bg-img">
-            <div class="container flex-center">
-                <div class="row pt-5 mt-3">
-                    <div class="col-md-12 mb-3">
-                        <div class="intro-info-content text-center">
-                            <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & IMAGING <span class="indigo-text font-bold">RESEARCH</span></h1>
-                            <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">What does the department do?</h5>
+        <!-- Intro Section -->
+        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/img.jpg">
+            <div class="full-bg-img">
+                <div class="container flex-center">
+                    <div class="row pt-5 mt-3">
+                        <div class="col-md-12 mb-3">
+                            <div class="intro-info-content text-center">
+                                <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & IMAGING
+                                    <span class="indigo-text font-bold">RESEARCH</span>
+                                </h1>
+                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">What does the department do?</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-	</header>
+    </header>
 
-	<main>
+    <main>
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-                        <p>Scene Reconstruction</p>
-                        <p>The objective of this Scene Reconstruction technology is about taking the information of a scene in reality and computing a 3-dimensional model of it. This information provided are usually several pictures or a video of the scene. First, 3d sensing techniques on a grid basis would be used to get 3d images of the scene. Then certain algorithms would be used to connect the scenes together and form the 3d model.</p>                    
-                        <p>Image-understanding System</p>
-                        <p>Image-understanding system, also called as IUS, contains three levels. The first is called the Low Level. It contains primitives like the sides, the shapes and their position. Going on there is the Intermediate Level containing the volumes, the boundaries, etc. Then there is the High Level which contains the scenes. These require a lot of information from further studies.</p>
-                        <p>Other than that, techniques like inference and control are also used in IUS. Inference simply means to deduce new information from the facts already known, while control is the process that decides which technique should be used and when.</p>
-                        <p>- The process of research from start to finish</p>
-                        <p>- Overview of each team, what they are working on, major accomplishments</p>
-                        <p>- Publications to each team</p>
-                        <p>- Twitter page to each team</p>
+                    <p>Scene Reconstruction</p>
+                    <p>The objective of this Scene Reconstruction technology is about taking the information of a scene in reality
+                        and computing a 3-dimensional model of it. This information provided are usually several pictures
+                        or a video of the scene. First, 3d sensing techniques on a grid basis would be used to get 3d images
+                        of the scene. Then certain algorithms would be used to connect the scenes together and form the 3d
+                        model.</p>
+                    <p>Image-understanding System</p>
+                    <p>Image-understanding system, also called as IUS, contains three levels. The first is called the Low Level.
+                        It contains primitives like the sides, the shapes and their position. Going on there is the Intermediate
+                        Level containing the volumes, the boundaries, etc. Then there is the High Level which contains the
+                        scenes. These require a lot of information from further studies.</p>
+                    <p>Other than that, techniques like inference and control are also used in IUS. Inference simply means to
+                        deduce new information from the facts already known, while control is the process that decides which
+                        technique should be used and when.</p>
+                    <p>- The process of research from start to finish</p>
+                    <p>- Overview of each team, what they are working on, major accomplishments</p>
+                    <p>- Publications to each team</p>
+                    <p>- Twitter page to each team</p>
                 </div>
             </div>
         </div>
     </main>
     <!-- /Start your project here-->
+
+    <!--Footer-->
+    <footer class="page-footer indigo center-on-small-only">
+
+        <!--Footer Links-->
+        <div class="container-fluid">
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-md-6">
+                    <h5 class="title">Address</h5>
+                    <p>Department of Computer Science
+                        <br>University College London
+                        <br>Gower Street
+                        <br>London
+                        <br>WC1E 6BT</p>
+                </div>
+                <!--/.First column-->
+
+                <!--Second column-->
+                <div class="col-md-6">
+                    <h5 class="title">Links</h5>
+                    <ul>
+                        <li>
+                            <a href="http://www.ucl.ac.uk/disclaimer/">Disclaimer</a>
+                        </li>
+                        <li>
+                            <a href="http://www.ucl.ac.uk/accessibility/">Accessibility</a>
+                        </li>
+                        <li>
+                            <a href="http://www.ucl.ac.uk/legal-services/privacy">Privacy</a>
+                        </li>
+                        <li>
+                            <a href="http://search2.ucl.ac.uk/s/search.html?collection=ucl-public-meta&form=advanced">UCL Search</a>
+                        </li>
+                        <li>
+                            <a href="http://www.cs.ucl.ac.uk/help/">CS Help</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--/.Second column-->
+            </div>
+        </div>
+        <!--/.Footer Links-->
+
+        <!--Copyright-->
+        <div class="footer-copyright">
+            <div class="container-fluid">
+                © 2017 Copyright: Team 29 UCL
+            </div>
+        </div>
+        <!--/.Copyright-->
+
+    </footer>
+    <!--/.Footer-->
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
