--- a/team.html
+++ b/team.html
@@ -21,63 +21,70 @@
 
     <!-- Start your project here-->
     <header>
-    
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
-        <div class="container">
 
-            <a class="navbar-brand" href="#"><img class='logo' src='img/ucl-logo-white.png'></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/history.html">History</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/research.html">The Research</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/impact.html">Impact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/get-involved.html">Get Involved</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">The Team</a>
-                    </li>
-                </ul>
-                <!--
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark translucent fixed-top scrolling-navbar">
+            <div class="container">
+
+                <a class="navbar-brand" href="#">
+                    <img class='logo' src='img/ucl-logo-white.png'>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/index.html">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/history.html">History</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/research.html">The Research</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/impact.html">Impact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/get-involved.html">Get Involved</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">The Team</a>
+                        </li>
+                    </ul>
+                    <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                 </form>-->
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <!-- Intro Section -->
-      <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/img.jpg">
-        <div class="full-bg-img">
-            <div class="container flex-center">
-                <div class="row pt-5 mt-3">
-                    <div class="col-md-12 mb-3">
-                        <div class="intro-info-content text-center">
-                            <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & IMAGING <span class="indigo-text font-bold">THE TEAM</span></h1>
-                            <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Who is in the department?</h5>
+        <!-- Intro Section -->
+        <div class="view hm-white-light jarallax" data-parallax="scroll" data-image-src="img/img.jpg">
+            <div class="full-bg-img">
+                <div class="container flex-center">
+                    <div class="row pt-5 mt-3">
+                        <div class="col-md-12 mb-3">
+                            <div class="intro-info-content text-center">
+                                <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & IMAGING
+                                    <span class="indigo-text font-bold">THE TEAM</span>
+                                </h1>
+                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Who is in the department?</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-	</header>
+    </header>
 
-	<main>
+    <main>
         <div class="container">
             <section class="section pb-5 card-section">
                 <h2 class="section-heading h1 pt-4">Our amazing team</h2>
@@ -98,7 +105,8 @@
                                         <p class="font-bold card-title">Professor in Imaging Science</p>
                                         <hr>
                                         <h5 class="mt-2 mb-2">Interests</h5>
-                                        <p class='card-interests'>Colour imaging, segmentation and tracking, medical imaging, MRI, tensor image processing, audio processing.</p>
+                                        <p class='card-interests'>Colour imaging, segmentation and tracking, medical imaging, MRI, tensor image processing,
+                                            audio processing.</p>
                                     </div>
 
                                 </div>
@@ -111,14 +119,68 @@
             <div class='row'>
                 <div class='col-md-3'>
                     <div class='card z-depth-2'>
-                        <img src='http://vis.cs.ucl.ac.uk/fileadmin/_processed_/9/a/csm_alexander_5d2d2da664.jpg'>
-                        lorem ipsum
+                        <img src='http://vis.cs.ucl.ac.uk/fileadmin/_processed_/9/a/csm_alexander_5d2d2da664.jpg'> lorem ipsum
                     </div>
                 </div>
             </div>
         </div>
     </main>
     <!-- /Start your project here-->
+
+    <!--Footer-->
+    <footer class="page-footer indigo center-on-small-only">
+
+        <!--Footer Links-->
+        <div class="container-fluid">
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-md-6">
+                    <h5 class="title">Address</h5>
+                    <p>Department of Computer Science
+                        <br>University College London
+                        <br>Gower Street
+                        <br>London
+                        <br>WC1E 6BT</p>
+                </div>
+                <!--/.First column-->
+
+                <!--Second column-->
+                <div class="col-md-6">
+                    <h5 class="title">Links</h5>
+                    <ul>
+                        <li>
+                            <a href="http://www.ucl.ac.uk/disclaimer/">Disclaimer</a>
+                        </li>
+                        <li>
+                            <a href="http://www.ucl.ac.uk/accessibility/">Accessibility</a>
+                        </li>
+                        <li>
+                            <a href="http://www.ucl.ac.uk/legal-services/privacy">Privacy</a>
+                        </li>
+                        <li>
+                            <a href="http://search2.ucl.ac.uk/s/search.html?collection=ucl-public-meta&form=advanced">UCL Search</a>
+                        </li>
+                        <li>
+                            <a href="http://www.cs.ucl.ac.uk/help/">CS Help</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--/.Second column-->
+            </div>
+        </div>
+        <!--/.Footer Links-->
+
+        <!--Copyright-->
+        <div class="footer-copyright">
+            <div class="container-fluid">
+                © 2017 Copyright: Team 29 UCL
+            </div>
+        </div>
+        <!--/.Copyright-->
+
+    </footer>
+    <!--/.Footer-->
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
